--- a/easybuy-hub/package.json
+++ b/easybuy-hub/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@hookform/resolvers": "^3.4.0",
     "@reduxjs/toolkit": "^2.2.5",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
@@ -16,6 +17,7 @@
     "sass": "^1.77.1",
     "styled-components": "^5.3.10",
     "web-vitals": "^2.1.4",
+    "yup": "^1.4.0",
     "zustand": "^4.5.2"
   },
   "scripts": {
